--- a/config/config.env
+++ b/config/config.env
@@ -1,4 +1,4 @@
 # Configuración de la aplicación
 MONGODB_URI=mongodb://localhost:27017
-DATABASE_NAME=GeenkCollectorFigure
+DATABASE_NAME=NAME_DB
 
